# cmake_demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clean.bat  make_version.bat  new_c_project.py
.Github/: copilot-instructions.md
cmake/: arm-gcc-toolchain.cmake  cmake_utils.cmake  git.cmake  git_version.cmake  includes.cmake  utils.cmake  utils_cmake.cmake  utils_include.cmake  version.h.in
script/: clean.bat
src/app/: main.c  main.cpp  version.h
src/lib/utils4c/: utils_lib.h  utils_list.h  utils_log.h  utils_string.h  utils_version.h
src/utils/: utils_debug.h  utils_fifo.c  utils_fifo.h  utils_lib.c  utils_lib.h  utils_list.c  utils_log.c  utils_math.c  utils_math.h  utils_power.c  utils_power.h  utils_string.c  utils_time.c  utils_time.h  utils_version.h
